# learn_git_cmake

./: .gitignore  .rsync-filter  CMakeLists.txt  README.txt
src/: algostuff.hpp  app.cpp  app.hpp  double_num.cpp  main.cpp
